<resources>
    <string name="app_name">TorahShare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload">Upload</string>
    <string name="you_need_to_get_approved">You need to get approved!</string>
    <string name="to_be_able_to_upload_videos_to_torahshare_you_need_to_get_approved_by_the_admin">To be able to upload videos to TorahShare you need to get approved by the admin.</string>
    <string name="get_approved">Get approved</string>
    <string name="approval_form">Approval Form</string>
    <string name="what_is_your_education">What is your education?</string>
    <string name="enter_your_answer">Enter your answer</string>
    <string name="what_is_your_occupation">What is your occupation?</string>
    <string name="enter_your_answer1">Enter your answer</string>
    <string name="what_religious_group_do_you_associate_with">What religious group do you associate with?</string>
    <string name="enter_your_answere">Enter your answer</string>
    <string name="next">Next</string>
    <string name="approval_forme">Approval Form</string>
    <string name="please_upload_2_examples_of_the_content_you_are_planning_to_upload_to_the_app">Please upload 2 examples of the content you are planning to upload to the app.</string>
    <string name="apply">Apply</string>
    <string name="successfully_uploaded">Successfully uploaded</string>
    <string name="thank_you_for_applying_for_the_uploading_part_of_the_torahshare_app_we_are_going_to_do_our_best_to_review_it_and_will_notify_you_via">thank you for applying for the uploading part of the TorahShare app we are going to do our best to review it and will notify you via</string>
    <string name="email">Email: </string>
    <string name="example_gmail_com">example@gmail.com</string>
    <string name="as_soon"> as soon</string>
    <string name="as_possible">as possible!</string>
    <string name="uploade">Upload</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_new_password">Confirm your new password</string>
    <string name="save">Save</string>
    <string name="have_an_account">Have an account?</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_old_password">Enter your old password</string>
    <string name="select_all">Select all</string>
    <string name="done">Done</string>
    <string name="shares">Shares</string>
    <string name="yousef_kahn">Yousef Kahn</string>
    <string name="do_you_want_to_accept_anddo_you_want_to_accept_anddo_you_want_to_accept_anddo_you_want_to_accept_anddo_you_want_to_accept_and">Do you want to accept andDo you want to accept andDo you want to accept andDo you want to accept andDo you want to accept and</string>
    <string name="yousef_kahnr">Yousef Kahn</string>
    <string name="sent_you_a_request_to"> sent you a request to</string>
    <string name="become_your_contact">become your contact</string>
    <string name="do_you_want_to_accept_and">Do you want to accept and</string>
    <string name="start_a_conversation">start a conversation?</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="adam_jacob">Adam Jacob</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="edit_profile">Edit profile</string>
    <string name="edit_profilew">Edit Profile</string>
    <string name="full_name">Full name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="phone_number">Phone number</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="emailw">Email</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="about_me">About me</string>
    <string name="let_people_know_what_your_account_is_all_about_n_n">Let People Know What Your Account Is All About \n\n</string>
    <string name="update">Update</string>
    <string name="following">Following</string>
    <string name="_203_following">203 Following</string>
    <string name="profile">Profile</string>
    <string name="chaim_chohan">Chaim chohan</string>
    <string name="no_bio_found">No bio found!</string>
    <string name="follow">Follow</string>
    <string name="followingg">Following</string>
    <string name="contact">Contact</string>
    <string name="followers">Followers</string>
    <string name="_201">201</string>
    <string name="followinge">Following</string>
    <string name="videos">Videos</string>
    <string name="_5000">5000</string>
    <string name="settings">Settings</string>
    <string name="management">Management</string>
    <string name="edit_profilel">Edit Profile</string>
    <string name="about_application">About Application</string>
    <string name="terms_and_conditions">Terms And Conditions</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="privacy">Privacy</string>
    <string name="no_contact_option">no contact option</string>
    <string name="change_passwords">Change password</string>
    <string name="language">Language</string>
    <string name="switch_to_hebrew">Switch to Hebrew</string>
    <string name="preferences">Preferences</string>
    <string name="logout">Logout</string>
    <string name="successfully_shared">Successfully shared</string>
    <string name="your_video_is_successfully_shared">Your video is successfully shared</string>
    <string name="back_to_home">Back to home</string>
    <string name="settingss">Settings</string>
    <string name="video">Video</string>
    <string name="uploaded">Uploaded</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="added">Added</string>
    <string name="photo_jpg">Photo.jpg</string>
    <string name="caption">Caption</string>
    <string name="jhgjhgjhgjhgj">jhgjhgjhgjhgj</string>
    <string name="tags">Tags</string>
    <string name="share_with">Share with</string>
    <string name="all_followers">All Followers</string>
    <string name="contacts">Contacts</string>
    <string name="reshare">Reshare</string>
    <string name="preview_video">Preview Video</string>
    <string name="share">Share</string>
    <string name="terms_and_conditionss">Terms and conditions</string>
    <string name="i_am_aware_that_n1_any_video_posted_or_shared_in_this_application_must_consist_solely_of_torah_content_such_as_a_dvar_torah_a_torah_concept_or_idea_or_any_type_of_torah_based_inspiration_n2_do_not_upload_a_video_containing_women_at_all_n3_content_that_is_subject_to_disagreement_among_the_ultra_orthodox_chareidi_public_should_not_be_uploaded_at_all_n4_in_any_doubt_whether_the_video_complies_with_the_rules_should_not_be_uploaded_n5_any_video_posted_or_shared_that_does_not_meet_the_above_criteria_may_result_in_temporary_or_permanent_suspension_of_users">I am aware that ...\n1. Any video posted or shared in this application must consist solely of Torah content such as a Dvar Torah, a Torah concept or idea, or any type of Torah-based inspiration.\n2. Do not upload a video containing women at all.\n3. Content that is subject to disagreement among the ultra-Orthodox (chareidi) public should not be uploaded at all.\n4. In any doubt whether the video complies with the rules should not be uploaded.\n5. Any video posted or shared that does not meet the above criteria may result in temporary or permanent suspension of users.</string>
    <string name="i_agree_with_the">I agree with the </string>
    <string name="terms_and_conditionsd">Terms and conditions.</string>
    <string name="declinee">Decline</string>
    <string name="acceptt">Accept</string>
    <string name="videoss">Videos</string>
    <string name="terms_and_conditionsss">Terms and conditions</string>
    <string name="i_am_aware_that_n1_any_video_posted_or_shared_in_this_application_must_consist_solely_of_torah_content_such_as_a_dvar_torah_a_torah_concept_or_idea_or_any_type_of_torah_based_inspiration_n2_do_not_upload_a_video_containing_women_at_all_n3_content_that_is_subject_to_disagreement_among_the_ultra_orthodox_chareidi_public_should_not_be_uploaded_at_all_n4_in_any_doubt_whether_the_video_complies_with_the_rules_should_not_be_uploaded_n5_any_video_posted_or_shared_that_does_not_meet_the_above_criteria_may_result_in_temporary_or_permanent_suspension_of_userss">I am aware that ...\n1. Any video posted or shared in this application must consist solely of Torah content such as a Dvar Torah, a Torah concept or idea, or any type of Torah-based inspiration.\n2. Do not upload a video containing women at all.\n3. Content that is subject to disagreement among the ultra-Orthodox (chareidi) public should not be uploaded at all.\n4. In any doubt whether the video complies with the rules should not be uploaded.\n5. Any video posted or shared that does not meet the above criteria may result in temporary or permanent suspension of users.</string>
    <string name="sign_up">Sign up</string>
    <string name="full_namee">Full name</string>
    <string name="enter_your_namee">Enter your name</string>
    <string name="gender">Gender</string>
    <string name="enter_your_nameee">Enter your name</string>
    <string name="select">Select</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="emaile">Email</string>
    <string name="enter_your_emaile">Enter your email</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="weak">Weak</string>
    <string name="sign_upe"> Sign Up</string>
    <string name="have_an_accounte">Have an account? </string>
    <string name="log_ine"> Log In</string>
    <string name="log_inw"> Log in</string>
    <string name="emailq">Email</string>
    <string name="enter_your_emailq">Enter your email</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="google">Google</string>
    <string name="verify_email">Verify Email</string>
    <string name="we_will_send_you_an_email_along_with_the_instructions_to_reset_your_password">We will send you an email along with the instructions to reset your password.</string>
    <string name="send_code">Send code</string>
    <string name="write_a_caption">Write a caption</string>
    <string name="optional">(Optional)</string>
    <string name="enter_your_caption_here">Enter your caption here</string>
    <string name="add_tags">Add #Tags</string>
    <string name="choose_contact">Choose contact</string>
    <string name="about">About</string>
    <string name="notice">Notice!</string>
    <string name="for_your_protection_we_don_t_allow_women_to_upload_videos_on_torahshare">For your protection, we don\'t allow women to upload videos on TorahShare</string>
    <string name="okay">Okay</string>
    <string name="report_this_video">Report this video?</string>
    <string name="reason_n_n_n_n">Reason...\n\n\n\n</string>
    <string name="cancel">Cancel</string>
    <string name="send_message_request">Send message request</string>
    <string name="ask_the_person_to_approve_you_once_he_approves_then_both_of_you_become_contacts_and_can_chat_and_share_videos">Ask the person to approve you, once he approves, then both of you become contacts and can chat and share videos.</string>
    <string name="say_something_that_he_she_can_recognize_you">Say something that he/she can recognize you.</string>
    <string name="type_n_n_n_n">Type.\n\n\n\n</string>
    <string name="send_request">Send request</string>
    <string name="weakk">Weak</string>
</resources>