<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/default_light_pink"
    android:layout_height="match_parent"
    tools:context=".activity.settings.ChangePasswordActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        app:tint="@color/black" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardSignUp"
        android:layout_centerInParent="true"
        style="@style/bg_card_sign_up"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/default_corner_radius"
        app:cardElevation="5dp">

        <LinearLayout style="@style/bg_linear_lyt_authentication">

            <TextView
                style="@style/textview_title_authentication"
                android:text="@string/change_password" />

            <TextView
                style="@style/small_title_authentication"
                android:text="@string/old_password" />

            <EditText
                android:id="@+id/oldPasswordEtSignUp"
                style="@style/edittext_authentication"
                android:hint="@string/enter_your_old_password" />

            <TextView
                style="@style/small_title_authentication"
                android:text="@string/new_password" />

            <EditText
                android:id="@+id/newPasswordEtSignUp"
                style="@style/edittext_authentication"
                android:hint="@string/enter_new_password" />

            <LinearLayout
                android:id="@+id/password_strength_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                android:weightSum="5">

                <View
                    android:id="@+id/password_strength_view_1"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_weight="1"
                    android:background="@color/red" />

                <View
                    android:id="@+id/password_strength_view_2"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginHorizontal="5dp"
                    android:layout_weight="1"
                    android:background="@color/darkGrey" />

                <View
                    android:id="@+id/password_strength_view_3"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/darkGrey" />

                <View
                    android:id="@+id/password_strength_view_4"
                    android:layout_width="0dp"
                    android:layout_height="4dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:background="@color/darkGrey" />

                <TextView
                    android:id="@+id/password_strength_textview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/weakk"
                    android:textColor="@color/red"
                    android:textSize="10sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                style="@style/small_title_authentication"
                android:text="@string/confirm_password" />

            <EditText
                android:id="@+id/confirmPasswordEtSignUp"
                style="@style/edittext_authentication"
                android:hint="@string/confirm_your_new_password" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/saveBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="30dp"
                android:padding="15dp"
                android:text="@string/save"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/default_corner_radius" />

            <LinearLayout
                android:id="@+id/alreadyHaveAnAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/have_an_account"
                    android:textColor="@color/default_text_grey" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_in"
                    android:textColor="@color/default_purple"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>