<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_light_pink"
    tools:context=".activity.UploadPostPreviewActivity">

    <!--    VIDEO UPLOADED LAYOUT  -->
    <RelativeLayout
        android:id="@+id/screen7"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/logo_layout" />

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:src="@drawable/tick_mark" />

            <TextView
                style="@style/textview_title_authentication"
                android:layout_marginTop="20dp"
                android:text="@string/successfully_shared"
                android:textColor="@color/default_green" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="40dp"
                android:gravity="center_horizontal"
                android:text="@string/your_video_is_successfully_shared"
                android:textColor="@color/default_text_black" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/backToHomeBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="50dp"
                android:elevation="0dp"
                android:padding="15dp"
                android:text="@string/back_to_home"
                android:textAllCaps="false"
                app:cornerRadius="@dimen/default_corner_radius"
                app:elevation="0dp" />


        </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <ImageView
            android:id="@+id/backBtn2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="20dp"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:visibility="invisible" />

    </RelativeLayout>

    <!--    POST PREVIEW LAYOUT     -->
    <RelativeLayout
        android:id="@+id/postPreviewLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/topiw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/settingss"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topiw">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="start"
                    android:text="@string/video"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/uploaded"
                    android:textColor="@color/green"
                    android:textSize="17sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/default_corner_radius"
                    app:cardElevation="0dp">

                    <TextView
                        android:id="@+id/videoName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="  635872356324.mp4"
                        android:textColor="@color/black" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:text="@string/thumbnail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/added"
                    android:textColor="@color/green"
                    android:textSize="17sp" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/default_corner_radius"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/photo_jpg"
                        android:textColor="@color/black" />

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:text="@string/caption"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/captionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/jhgjhgjhgjhgj"
                    android:textColor="@color/default_text_grey" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:text="@string/tags"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <me.originqiu.library.EditTag
                    android:id="@+id/tagEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="15dp"
                    app:delete_mode_bg="@color/otherPink"
                    app:input_layout="@layout/view_sample_input_tag"
                    app:tag_layout="@layout/view_sample_tag" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="start"
                    android:text="@string/share_with"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/followersTextVieww"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/all_followers"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/contactsTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:text="@string/contacts"
                    android:textColor="@color/black"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <me.originqiu.library.EditTag
                    android:id="@+id/tagEditTextContacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="5dp"
                    android:paddingVertical="15dp"
                    app:delete_mode_bg="@color/otherPink"
                    app:input_layout="@layout/view_sample_input_tag"
                    app:tag_layout="@layout/view_sample_tag" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reshareBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp"
            android:padding="15dp"
            android:text="@string/share"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/default_corner_radius" />

    </RelativeLayout>

</RelativeLayout>