<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/default_corner_radius">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/crossBtnDialog"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="end"
            android:src="@drawable/ic_baseline_close_24" />

        <TextView
            android:id="@+id/topi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/send_message_request"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/bioTextViewDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="40dp"
            android:text="@string/ask_the_person_to_approve_you_once_he_approves_then_both_of_you_become_contacts_and_can_chat_and_share_videos"
            android:textColor="@color/default_text_grey"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:gravity="start"
            android:text="@string/say_something_that_he_she_can_recognize_you"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/default_corner_radius"
            app:cardElevation="0dp"
            app:strokeColor="#338F8790"
            app:strokeWidth="1dp">

            <EditText
                android:id="@+id/messageEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:background="@color/white"
                android:hint="@string/type_n_n_n_n"
                android:inputType="textMultiLine"
                android:textColor="#8F8790" />

        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sendBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:padding="15dp"
            android:text="@string/send_request"
            android:textAllCaps="false"
            app:cornerRadius="@dimen/default_corner_radius" />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>